Drop "--enable-preview" from JDK 11 build options (#4760)